--- a/src/components/Award.css
+++ b/src/components/Award.css
@@ -1,43 +1,55 @@
-.award{
-    height:200px;
-            width:300px;
+.award {
+    height: 200px;
+    width: 300px;
 }
 
- 
-.award-part-1{
+
+.award-part-1 {
     /* width: 0%; */
-    /* width: 80%; */
-    font-size: 1rem;
-     
+    width: 100% !important;
+    font-size: 1.4rem;
+
 }
 
-.table-1{
+.table-1 {
     margin: 0;
     background-color: white;
-    width: 60vw;
+    /* width: 60vw; */
     /* padding: 10%; */
+    width: 80% !important;
     border: none;
+    margin: auto;
     border-radius: 25px;
 }
 
-.table-1 td{
-    padding: 3% 5%;
+.table-1 td {
+    padding: 2% 5%;
     border-bottom: 1px solid #e6e6e6;
 }
 
 @media screen and (max-width: 768px) {
-    .award{
-        height:100px;
-            width:150px;
+    .award {
+        height: 100px;
+        width: 150px;
     }
-    .table-award{
+
+    .table-award {
         font-size: 1rem;
         margin: 0;
         /* width: 90%; */
     }
-    .award-part-1{
-font-size: 0.7rem;
-margin: 1%;
+
+    .award-part-1 {
+        font-size: 0.9rem;
+        /* margin: 1%; */
+        width: 85% !important;
+    }
+
+    .table-1 {
+        width: 100% !important;
+    }
+
+    .awardDiv {
+        margin-bottom: -30px !important;
     }
 }
-    
