--- a/src/components/work.css
+++ b/src/components/work.css
@@ -1,18 +1,69 @@
-.card-get-in-touch{
+.card-get-in-touch {
     flex-direction: row;
 }
 
-@media screen and (max-width: 768px) {
-    .card-get-in-touch{
-        width: 80%;
-        flex-direction: column;
-        margin: auto;
-        padding: 0;
-    }
-    .card-columns
-    {
-
-    }
-    
+.workPageDiv {
+    border: 2px solid white;
 }
-    
+
+.workPageDivButton {
+    padding: 0 25px !important;
+    margin: 0 !important;
+    font-size: 18px;
+}
+
+.card-img-top {
+    width: 100%;
+}
+
+.card-columns {
+    width: 100%;
+}
+
+.cardGroup {
+    width: 30%;
+    height: 30%;
+}
+
+@media screen and (max-width: 768px) {
+
+    .card-img-top {
+        width: 100% !important;
+    }
+
+    .workPage {
+        padding: 30px 0 0 0 !important;
+    }
+
+    .workPageDiv {
+        padding: 10px 20px 20px 20px !important;
+        width: 85% !important;
+        border: 2px solid white;
+        flex-direction: column;
+    }
+
+    .workPageDivBox {
+        padding: 15px 0px !important;
+        text-align: justify;
+    }
+
+    .workPageDivButton {
+        padding: 0 !important;
+        margin: 0 !important;
+        font-size: 18px;
+    }
+
+    .workPageDivCard {
+        background-color: yellow;
+    }
+
+    .workPageDivIcon {
+        width: 100% !important;
+        margin: 0 !important;
+    }
+
+    .cardGroup {
+        width: 100%;
+        height: 100%;
+    }
+}
