--- a/src/components/Award.css
+++ b/src/components/Award.css
@@ -49,7 +49,7 @@
         width: 100% !important;
     }
 
-    .awardDiv {
+    /* .awardDiv {
         margin-bottom: -30px !important;
-    }
+    } */
 }
