--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -129,6 +129,8 @@
     .contactPage {
         padding: 0 0 25px 0 !important;
         margin: 0 !important;
+        min-height: auto;
+
     }
 
     .airplane {
