--- a/src/index.css
+++ b/src/index.css
@@ -1,25 +1,29 @@
 /* width */
 ::-webkit-scrollbar {
-  width: 6px;
+  width: 15px;
   border-color: #28a745;
-
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px grey; 
-  border-radius: 10px;
+  /* box-shadow: inset 0 0 5px black; */
+  background-color: black;
+  /* border-radius: 10px; */
 }
- 
+
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #28a745; 
+  /* background: #28a745;  */
+  background: linear-gradient(to top, #54b8d8, #72eca5);
+  border-radius: 25px !important;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #24863b; 
+  background: linear-gradient(to top, #72eca5, #54b8d8);
+
 }
+
 
 body {
   margin: 0;
@@ -35,19 +39,22 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
 /* Navbar */
-.navbar-nav li a{
+.navbar-nav li a {
   font-size: 17px;
 }
-.navbar-brand{
+
+.navbar-brand {
   letter-spacing: 3px;
 }
 
 /* Card */
-.card{
+.card {
   transition: all 0.5s ease;
 }
-.card:hover{
+
+.card:hover {
   transform: scale(1.1);
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
 }
@@ -56,6 +63,7 @@ code {
 .product img {
   transition: all 0.5s ease;
 }
-.product img:hover{
+
+.product img:hover {
   transform: scale(1.1);
 }
