--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -51,4 +51,10 @@
         text-align: start;
 
     } */
+
+    .container-fluid {
+        display: flex !important;
+        justify-content: end !important;
+
+    }
 }
