--- a/src/components/Books.css
+++ b/src/components/Books.css
@@ -22,6 +22,8 @@
     .bookPageSmallHeading {
         text-align: center;
         padding: 0px 15px 0px 15px !important;
+        font-size: 25px !important;
+        word-spacing: 1px !important;
     }
 
     .bookPageParagraph {
