--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -5,10 +5,40 @@
         padding: 0 !important;
     }
 
-    .footerPageDiv {
+    /* .footerPageDiv {
         width: 85% !important;
-        /* background-color: aqua; */
         margin: auto;
+    } */
+
+    .footerPageDiv {
+        width: 100% !important;
+
+    }
+
+    .footerLogo {
+        /* flex-direction: column; */
+        /* background-color: aqua; */
+        display: flex !important;
+        flex-wrap: wrap !important;
+        /* margin: 0% !important;
+        padding: 0% !important; */
+        width: 100% !important;
+        margin: auto !important;
+
+    }
+
+    .align-text-top {
+        /* background-color: red; */
+        width: 77.2px !important;
+        height: 240px !important;
+    }
+
+
+    .footerLogo p {
+        /* margin: auto 0; */
+        width: 100% !important;
+        font-weight: 400 !important;
+        text-align: justify !important;
     }
 
     .footerLogo {
@@ -18,16 +48,16 @@
     }
 
     .footerMenu {
-        width: 40% !important;
+        width: 100% !important;
         padding: 0 !important;
         margin: 0 !important;
         height: auto;
 
     }
 
-    .footerMenuDiv {
+    /* .footerMenuDiv {
         display: flex;
-    }
+    } */
 
     .footerMenuUl {
         display: inline-block;
@@ -81,7 +111,34 @@
 }
 
 .footerPageDiv {
-    width: 98%;
+    width: 100%;
     /* background-color: aqua; */
-    margin: auto;
+    background-color: yellow;
+    display: flex;
+    justify-content: center;
+
+}
+
+.footerLogo {
+    width: 65% !important;
+    display: flex;
+    align-items: center;
+    /* justify-content: center; */
+    /* background-color: red; */
+}
+
+.footerLogo p {
+    margin: auto 0;
+    width: 18%;
+    font-size: 21px;
+    font-weight: 100;
+}
+
+.footerMenuUl {
+    /* background-color: red; */
+    flex-direction: column !important;
+}
+
+.footerMenuUl a {
+    font-weight: 700;
 }
